Third Page DONE

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,12 +396,13 @@ main > section:nth-child(1) > div > div > div > a > img {
 }
 */
 
-* {
+/*=======================================================*/
+/** {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     scroll-behavior: smooth;
 }
-body > header {
+!*body > main {
     position: relative;
     height: 70px;
     box-shadow: 5px 6px 10px 1px rgba(0, 0, 0, 0.062);
@@ -410,9 +411,13 @@ body > header {
     justify-content: right;
     align-items: center;
 
+}*!
+
+main{
+    background-image: url("../images/social/coverMain.png");
 }
 
-header > nav {
+main > nav {
     font-size: 20px;
     font-weight: 700;
     color: rgb(255, 255, 255);
@@ -420,40 +425,44 @@ header > nav {
     margin-top: -30px;
 }
 
-header > nav > ul {
+main > nav > ul {
     list-style: none;
     text-align: center;
 }
 
-header > nav > ul > li {
+main > nav > ul > li {
     display: inline;
     margin-left: 55px;
 
 }
 
-header > nav > ul > li:hover {
+main > nav > ul > li:hover {
     color: #fec51c;
     cursor: pointer;
 }
 
-#profile{
-    background-image: url("../images/social/mypic.jpeg");
-    width: 380px;
-    height: 380px;
-    background-color: black;
+#profile > img{
+   !* background-image: url("../images/social/mypic.jpeg");*!
+    width: 321px;
+    height: 320px;
+   !* background-color: black;*!
     border-radius: 70%;
     border: 5px solid #FFA502;
-    box-sizing: border-box;
+   !* box-sizing: border-box;
     background-position: 50%;
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 50px;
     margin-top: -80px;
-    margin-bottom: -300px;
+    margin-bottom: -300px;*!
+    position: relative;
+    top: 10px;
+    left: auto;
+    margin: auto;
 }
 #home{
-    background-image: url("../images/social/coverMain.png");
-    height: 85vh;
+    height: 92vh;
+    width: 224vh;
 }
 #myName{
     font-size: 40px;
@@ -462,12 +471,119 @@ header > nav > ul > li:hover {
     margin: auto;
     left: 860px;
     color: #fec51c;
+    line-height: 20px;
+
 }
 #fistName{
     font-size: 35px;
     color:#eeeeee;
+    margin-right: 20px;
+
 }
 #lastName{
     color:#eeeeee;
     font-size: 35px;
+}*/
+/*
+==================================================================*/
+/*=================home=================*/
+* {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    scroll-behavior: smooth;
+}
+.coverPage{
+    margin-top:-158px;
+    border: #ff253a 10px;
+}
+.headerText{
+    position: relative;
+    height: 70px;
+    box-shadow: 5px 6px 10px 1px rgb(0 0 0 / 6%);
+    z-index: 1;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    top: -886px;
+}
+.naviHeader{
+    font-size: 30px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    margin-right: 30px;
+    margin-top: -11px;
+}
+
+.ulHeader {
+    list-style: none;
+    text-align: center;
+}
+
+.liHeader {
+    display: inline;
+    margin-left: 55px;
+
+}
+
+.liHeader :hover {
+    color: #fec51c;
+    cursor: pointer;
+}
+
+#proPic{
+    position: absolute;
+    justify-content: center;
+    width: 394px;
+    height: 371px;
+    background-color: black;
+    border: 5px solid #FFA502;
+    margin: auto;
+    left: 131px;
+    /* top: -703px; */
+    border-radius: 100%;
+    bottom: 249px;
+}
+
+#myName{
+    font-size: 40px;
+    position: absolute;
+    justify-content: center;
+    top: 234px;
+    left: 663px;
+    color: #fec51c;
+    line-height: 20px;
+/* margin: auto;*/
+}
+#fistName{
+font-size: 35px;
+color:#eeeeee;
+margin-right: 20px;
+
+}
+#lastName {
+color: #eeeeee;
+font-size: 35px;
+}
+
+/*=================aboutMe=================*/
+#aboutMe{
+    margin-top: 831px;
+    width: 1000vh;
+}
+#divAboutMe{
+    margin-left: 200px;
+}
+#aboutMePic{
+    width: 321px;
+    height: 320px;
+    background-color: black;
+    border: 5px solid #FFA502;
+    margin-top: -783px;
+}
+.secondNavHeaderText{
+    font-size: 30px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    margin-right: 30px;
+    margin-top: -362px;
 }
