--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,502 +1,16 @@
-/*
-* {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    scroll-behavior: smooth;
-}
-
-body > header {
-    position: relative;
-    height: 70px;
-    background-color: #212428;
-    box-shadow: 5px 6px 10px 1px rgba(0, 0, 0, 0.062);
-    z-index: 1;
-    display: flex;
-    justify-content: right;
-+    align-items: center;
-}
-
-header > h2 {
-    position: absolute;
-    left: 20px;
-    font-size: 50px;
-    color: #00FF85;
-    margin-right: 20px;
-}
-
-header > nav {
-    font-size: 20px;
-    font-weight: 450;
-    color: rgb(255, 255, 255);
-    margin-right: 30px;
-
-}
-
-header > nav > ul {
-    list-style: none;
-    text-align: center;
-}
-
-header > nav > ul > li {
-    display: inline;
-    margin-left: 55px;
-
-}
-
-header > nav > ul > li:hover {
-    color: #fec51c;
-    cursor: pointer;
-}
-
-!*HOME*!
-
-#sec-home {
-    background-image: url("../images/social/coverMain.png");
-    height: 100vh;
-
-}
-
-#profile {
-    width: 387px;
-    height: 387px;
-    background-color: black;
-    border-radius: 100%;
-    border: 5px solid #FFB142;
-    box-sizing: border-box;
-    background-image: url("../images/social/mypic.jpeg");
-    background-position: 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-left: 50px;
-    margin-top: 100px;
-}
-
-
-main > section:nth-child(1) > div > div {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    margin: auto;
-    height: 250px;
-    margin-left: 398px;
-    color: white;
-}
-
-main > section:nth-child(1) > div > div > h1 {
-    font-size: 60px;
-    font-weight: 700;
-    display: inline;
-    margin-left: 100px;
-    margin-top: 10px;
-
-}
-
-main > section:nth-child(1) > div > div > h1 > span {
-    background-color: transparent;
-    color: #fec51c;
-}
-
-main > section:nth-child(1) > div > div > p {
-    font-size: 35px;
-    font-weight: 700;
-    margin-left: 100px;
-    margin-top: 10px;
-}
-
-main > section:nth-child(1) > div > div > div {
-    margin-top: 10px;
-    margin-left: 100px;
-
-}
-
-main > section:nth-child(1) > div > div > div > a > img {
-    width: 50px;
-    height: 50px;
-    fill: white;
-    margin-right: 20px;
-}
-
-#text {
-    position: absolute;
-    width: 350px;
-    height: 350px;
-    left: 1300px;
-    top: 35.85000000000002px;
-    background: radial-gradient(80% 80% at 80% 80%, #cd9b9b 0%, rgba(255, 255, 255, 0) 150%);
-    transform: rotate(0deg);
-    border: 1px solid #ffffff;
-}
-
-#text > h2 {
-    text-align: center;
-    position: absolute;
-    font-family: Roboto;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 42px;
-    color: #FFFFFF;
-
-}
-
-#line {
-    position: absolute;
-    width: 2114px;
-    height: 19px;
-    left: 0px;
-    top: 1110px;
-    background: #F1C40F;
-}
-
-!*ABOUT ME*!
-
-#aboutMe {
-    height: 100vh;
-    background-color: #212428;
-
-}
-
-#aboutMe > div:first-child {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: underline white;
-}
-
-#aboutMe > div > h2 {
-    position: relative;
-    font-size: 62px;
-    color: #EFF0F0;
-}
-
-!*info*!
-#personal-info{
-    width: 600px;
-    color: #AFB6D2;
-    margin-left: 100px;
-    font-size: 35px;
-}
-
-#personal-info > h3 {
-    margin-left: -25px;
-    color: #fec51c;
-}
-
-
-.list {
-    padding: 0px;
-    font-size: 20px;
-    margin: 0;
-    font-size: 25px;
-
-}
-
-.list > li, address > li {
-    margin-bottom: 22px;
-    list-style: disc;
-}
-
-.list > address {
-    font-style: normal;
-}
-
-.list > li > span {
-    font-weight: 700;
-}
-
-.list > address > li > span > a {
-    font-weight: 700;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-}
-
-#info > p {
-    position: relative;
-    width: 1782px;
-    height: 128px;
-    left: 65px;
-    top: 159px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 35px;
-    color: #AFB6D2;
-}
-#img {
-    background-image: url("../images/social/coverMain.png");
-    position: absolute;
-    width: 385px;
-    height: 458px;
-    left: 1677px;
-    top: 1309px;
-    border-radius: 30px;
-    background-position: 50%;
-    background-size: cover;
-
-}
-!*button*!
-#cv-btn {
-    position: relative;
-    width: 550px;
-    height: 86px;
-    border: 5px solid #fec51c;
-    background-color: transparent;
-    border-radius: 25px;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 10px 5px rgb(0 0 0);
-    color: #ffffff;
-    line-height: 31px;
-    font-size: 36px;
-    font-weight: bold;
-    text-align: center;
-    margin-left: 1529px;
-    margin-top: 162px;
-    margin-right: 51px;
-    cursor: pointer;
-}
-
-#cv-btn:hover {
-    background-color: #FEC51C;
-}
-
-#cv-btn > span {
-    text-transform: capitalize;
-    position: relative;
-    right: 0px;
-    letter-spacing: 5px;
-}
-
-
-
-!*SKILLS*!
-
-#Skills {
-    height: 100vh;
-    background-color: #212428;
-    text-decoration: underline white;
-
-}
-
-#Skills > div {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-#Skills > div > h2 {
-    position: relative;
-    font-size: 62px;
-    color: #EFF0F0;
-
-}
-
-
-!*PROJECT*!
-
-#Project {
-    height: 100vh;
-    background-color: #212428;
-    text-decoration: underline white;
-
-}
-
-#Project > div {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-#Project > div > h2 {
-    position: relative;
-    font-size: 62px;
-    color: #EFF0F0;
-
-}
-
-
-!*ASSIGNMENTS*!
-
-#Assignments {
-    height: 100vh;
-    background-color: #212428;
-    text-decoration: underline white;
-
-}
-
-#Assignments > div {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-#Assignments > div > h2 {
-    position: relative;
-    font-size: 62px;
-    color: #EFF0F0;
-
-}
-
-
-!*HOBBIES*!
-
-#Hobbies {
-    height: 100vh;
-    background-color: #212428;
-    text-decoration: underline white;
-
-}
-
-#Hobbies > div {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-#Hobbies > div > h2 {
-    position: relative;
-    font-size: 62px;
-    color: #EFF0F0;
-
-}
-
-
-!*CONTACTS*!
-
-#Contacts {
-    height: 100vh;
-    background-color: #212428;
-    text-decoration: underline white;
-
-}
-
-#Contacts > div {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-#Contacts > div > h2 {
-    position: relative;
-    font-size: 62px;
-    color: #EFF0F0;
-
-}
-*/
-
-/*=======================================================*/
-/** {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    scroll-behavior: smooth;
-}
-!*body > main {
-    position: relative;
-    height: 70px;
-    box-shadow: 5px 6px 10px 1px rgba(0, 0, 0, 0.062);
-    z-index: 1;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-
-}*!
-
-main{
-    background-image: url("../images/social/coverMain.png");
-}
-
-main > nav {
-    font-size: 20px;
-    font-weight: 700;
-    color: rgb(255, 255, 255);
-    margin-right: 30px;
-    margin-top: -30px;
-}
-
-main > nav > ul {
-    list-style: none;
-    text-align: center;
-}
-
-main > nav > ul > li {
-    display: inline;
-    margin-left: 55px;
-
-}
-
-main > nav > ul > li:hover {
-    color: #fec51c;
-    cursor: pointer;
-}
-
-#profile > img{
-   !* background-image: url("../images/social/mypic.jpeg");*!
-    width: 321px;
-    height: 320px;
-   !* background-color: black;*!
-    border-radius: 70%;
-    border: 5px solid #FFA502;
-   !* box-sizing: border-box;
-    background-position: 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-left: 50px;
-    margin-top: -80px;
-    margin-bottom: -300px;*!
-    position: relative;
-    top: 10px;
-    left: auto;
-    margin: auto;
-}
-#home{
-    height: 92vh;
-    width: 224vh;
-}
-#myName{
-    font-size: 40px;
-    position: relative;
-    top: 100px;
-    margin: auto;
-    left: 860px;
-    color: #fec51c;
-    line-height: 20px;
-
-}
-#fistName{
-    font-size: 35px;
-    color:#eeeeee;
-    margin-right: 20px;
-
-}
-#lastName{
-    color:#eeeeee;
-    font-size: 35px;
-}*/
-/*
-==================================================================*/
 /*=================home=================*/
 * {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     scroll-behavior: smooth;
 }
-.coverPage{
-    margin-top:-158px;
+
+.coverPage {
+    margin-top: -158px;
     border: #ff253a 10px;
 }
-.headerText{
+
+.headerText {
     position: relative;
     height: 70px;
     box-shadow: 5px 6px 10px 1px rgb(0 0 0 / 6%);
@@ -506,7 +20,8 @@ main > nav > ul > li:hover {
     align-items: center;
     top: -886px;
 }
-.naviHeader{
+
+.naviHeader {
     font-size: 30px;
     font-weight: 700;
     color: rgb(255, 255, 255);
@@ -530,7 +45,7 @@ main > nav > ul > li:hover {
     cursor: pointer;
 }
 
-#proPic{
+#proPic {
     position: absolute;
     justify-content: center;
     width: 363px;
@@ -543,7 +58,7 @@ main > nav > ul > li:hover {
     bottom: 131px;
 }
 
-#myName{
+#myName {
     font-size: 40px;
     position: absolute;
     justify-content: center;
@@ -552,36 +67,80 @@ main > nav > ul > li:hover {
     color: #fec51c;
     line-height: 20px;
 }
-#fistName{
-font-size: 35px;
-color:#eeeeee;
-margin-right: 20px;
+
+#fistName {
+    font-size: 35px;
+    color: #eeeeee;
+    margin-right: 20px;
 
 }
+
 #lastName {
-color: #eeeeee;
-font-size: 35px;
+    color: #eeeeee;
+    font-size: 35px;
 }
 
 /*=================aboutMe=================*/
-#aboutMe{
-    margin-top: 831px;
-    width: 1000vh;
-}
-#divAboutMe{
-    margin-left: 200px;
-}
-#aboutMePic{
-    width: 321px;
-    height: 320px;
-    background-color: black;
-    border: 5px solid #FFA502;
-    margin-top: -783px;
-}
-.secondNavHeaderText{
+
+.secondNavHeaderText {
     font-size: 30px;
     font-weight: 700;
     color: rgb(255, 255, 255);
     margin-right: 30px;
     margin-top: -362px;
+}
+
+#aboutMePic {
+    width: 495px;
+    height: 675px;
+    position: absolute;
+    top: 1019px;
+    left: 58px;
+    border-radius: 57px;
+    border: 5px solid #FFA502;
+}
+#info{
+    position: absolute;
+    width: 600px;
+    color: #AFB6D2;
+    margin-left: 458px;
+    font-size: 35px;
+    top: 1006px;
+    letter-spacing: 2px;
+    line-height: 250%;
+}
+#info > pre > span{
+    color:#fec51c ;
+    tab-size: 5;
+}
+/*button*/
+#btnCv{
+    position: relative;
+    width: 480px;
+    height: 78px;
+    border: 5px solid black;
+    background-color: transparent;
+    border-radius: 28px;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 10px 5px rgb(0 0 0);
+    color: #ffffff;
+    line-height: 31px;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin-left: 879px;
+    margin-top: -35px;
+    margin-right: 49px;
+    cursor: pointer;
+
+}
+#btnCv:hover {
+    background-color: #f39c12;
+}
+
+#btnCv > span {
+    text-transform: capitalize;
+    position: relative;
+    right: 0px;
+    letter-spacing: 5px;
 }
