--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@
 
 }
 
-.liHeader :hover {
+.liHeader:hover {
     color: #fec51c;
     cursor: pointer;
 }
@@ -48,14 +48,14 @@
 #proPic {
     position: absolute;
     justify-content: center;
-    width: 363px;
-    height: 365px;
+    width: 455px;
+    height: 459px;
     background-color: black;
     border: 5px solid #FFA502;
     margin: auto;
-    left: 148px;
+    left: 114px;
     border-radius: 100%;
-    bottom: 131px;
+    bottom: 160px;
 }
 
 #myName {
@@ -63,9 +63,9 @@
     position: absolute;
     justify-content: center;
     top: 185px;
-    left: 612px;
+    left: 730px;
     color: #fec51c;
-    line-height: 20px;
+    line-height: 200%;
 }
 
 #fistName {
@@ -79,6 +79,28 @@
     color: #eeeeee;
     font-size: 35px;
 }
+
+#iconPic{
+    display: flex;
+    width: max-content;
+    height: 469px;
+    justify-content: space-between;
+    z-index: 100;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    margin-right: 35px;
+}
+#iconPic >img{
+    width: 10px;
+    margin: 4px;
+    cursor: pointer;
+}
+
 
 /*=================aboutMe=================*/
 
